--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3eCmqh8KIJvvCl9tNjFjOWTqRqT5UKFxkqTOW6RHwZ0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
